--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -20,26 +20,26 @@ jobs:
       - run: flutter analyze
       - run: flutter test
 
-  build_ios:
-    name: Build Flutter (iOS)
-    needs: [flutter_test]
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v1
-        with:
-          channel: "stable"
-      - run: flutter pub get
-      - run: flutter clean
-      - run: flutter build ios --release --no-codesign
-      - name: Save IPA as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: Runner.ipa
-          path: build/ios/iphoneos/Runner.ipa
+  # build_ios:
+  #   name: Build Flutter (iOS)
+  #   needs: [flutter_test]
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-java@v1
+  #       with:
+  #         java-version: "12.x"
+  #     - uses: subosito/flutter-action@v1
+  #       with:
+  #         channel: "stable"
+  #     - run: flutter pub get
+  #     - run: flutter clean
+  #     - run: flutter build ios --release --no-codesign
+  #     - name: Save IPA as artifact
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: Runner.ipa
+  #         path: build/ios/iphoneos/Runner.ipa
 
   build_apk:
     name: Build Flutter (Android)
