--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.0.2
   dio: ^5.1.2
+  google_sign_in: ^6.1.3
 
 dev_dependencies:
   flutter_test:
