--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   dio: ^5.1.2
   google_sign_in: ^6.1.3
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
