--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["autovalidate", "comminq", "cupertino", "dotenv"]
+  "cSpell.words": ["autovalidate", "comminq", "cupertino", "dotenv", "unfocus"]
 }
