--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^5.1.2
   google_sign_in: ^6.1.3
   flutter_secure_storage: ^8.0.0
+  sentry_flutter: ^7.7.0
 
 dev_dependencies:
   flutter_test:
