Add workflow step to send the apk app to my email

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ migrate_working_dir/
 .env.production
 .env.development
 
+send_email.py
+
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
