--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -8,8 +8,6 @@ env:
   CLIENT_ID: ${{ secrets.CLIENT_ID }}
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
 
-  
-
 jobs:
   flutter_test:
     name: Run flutter test and analyze
@@ -68,3 +66,18 @@ jobs:
         with:
           name: app.apk
           path: build/app/outputs/apk/release/app-release.apk
+
+      # - name: Set up Python
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.x
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+
+      # - name: Send APK via Email
+      #   run: |
+      #     python send_email.py
+      #   env:
+      #     GMAIL_CLIENT_SECRET: ${{ secrets.GMAIL_CLIENT_SECRET }}
+      #     GMAIL_API_TOKEN: ${{ secrets.GMAIL_API_TOKEN }}
