--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,7 @@ migrate_working_dir/
 *.iws
 .idea/
 
-.env
-.env.production
-.env.development
-
 send_email.py
-
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -49,3 +44,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Hide environment files
+.env.*
