Update the workflow of github actions

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -42,20 +42,20 @@ jobs:
       - run: flutter clean
 
       # Generate production keystore
-      - name: Generate production keystore
-        run: |
-          keytool -genkey -v -keystore ${{ github.workspace }}/android/app/production.keystore -alias production -keyalg RSA -keysize 2048 -validity 10000 -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} -dname "CN=Walid, OU=Comminq, O=Comminq, L=Kairouan, S=Kairouan, C=TN"
+      # - name: Generate production keystore
+      #   run: |
+      #     keytool -genkey -v -keystore ${{ github.workspace }}/android/app/production.keystore -alias production -keyalg RSA -keysize 2048 -validity 10000 -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} -dname "CN=Walid, OU=Comminq, O=Comminq, L=Kairouan, S=Kairouan, C=TN"
 
-      - run: flutter build apk --release
+      # - run: flutter build apk --release
 
-      - name: Sign APK with production keystore
-        run: |
-          jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore ${{ github.workspace }}/android/app/production.keystore ${{ github.workspace }}/android/app/build/app/outputs/apk/release/app-release.apk production -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }}
-          zipalign -v -p 4 ${{ github.workspace }}/android/app/build/app/outputs/apk/release/app-release.apk ${{ github.workspace }}/android/app/build/app/outputs/apk/release/app-release-aligned.apk
+      # - name: Sign APK with production keystore
+      #   run: |
+      #     jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore ${{ github.workspace }}/android/app/production.keystore ${{ github.workspace }}/android/app/build/app/outputs/apk/release/app-release.apk production -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }}
+      #     zipalign -v -p 4 ${{ github.workspace }}/android/app/build/app/outputs/apk/release/app-release.apk ${{ github.workspace }}/android/app/build/app/outputs/apk/release/app-release-aligned.apk
 
-      - name: Display SHA-1 Fingerprint
-        run: |
-          keytool -list -v -keystore ${{ github.workspace }}/android/app/production.keystore -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} | grep SHA1: | awk '{print $NF}'
+      # - name: Display SHA-1 Fingerprint
+      #   run: |
+      #     keytool -list -v -keystore ${{ github.workspace }}/android/app/production.keystore -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} | grep SHA1: | awk '{print $NF}'
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
