--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -47,3 +47,18 @@ jobs:
         with:
           name: app.apk
           path: build/app/outputs/apk/release/app-release.apk
+
+  extract_fingerprint:
+    name: Extract SHA1 Fingerprint
+    needs: [build_apk]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download APK artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: app.apk
+          path: ${{ github.workspace }}/app.apk
+
+      - name: Extract SHA1 fingerprint
+        run: |
+          keytool -list -printcert -jarfile ${{ github.workspace }}/app.apk | grep SHA1
