--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -42,7 +42,6 @@ jobs:
       - run: flutter clean
       - run: flutter build apk --release
 
-  
   extract_fingerprint:
     name: Extract SHA1 Fingerprint
     needs: [build_apk]
@@ -56,4 +55,4 @@ jobs:
 
       - name: Extract SHA1 fingerprint
         run: |
-          keytool -list -printcert -jarfile ${{ github.workspace }}/app.apk | grep SHA1
+          keytool -list -printcert -jarfile build/app/outputs/apk/release/app-release.apk | grep SHA1
