--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -42,6 +42,9 @@ jobs:
       - run: flutter clean
       - run: flutter build apk --release
 
+      - name: Go to Android project directory
+        run: cd android
+
       - name: Generate Signing Report
         run: ./gradlew signingReport
 
