--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   flutter_test:
-    name: Run flutter test and analyze
+    name: Run Flutter test and analyze
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -42,19 +42,16 @@ jobs:
       - run: flutter clean
       - run: flutter build apk --release
 
-      - name: Go to Android project directory
-        run: cd android
-
-      - name: Generate Signing Report
-        run: ./gradlew signingReport
+      - name: Copy APK to artifacts directory
+        run: cp build/app/outputs/apk/release/app-release.apk ${{ github.workspace }}/artifacts/
 
       - name: Log Fingerprint
         run: |
           echo "Debug Fingerprint:"
-          grep "SHA1: " app/build/outputs/apk/release/signing-report.txt
+          keytool -list -printcert -jarfile ${{ github.workspace }}/artifacts/app-release.apk | grep SHA1
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
           name: app.apk
-          path: build/app/outputs/apk/release/app-release.apk
+          path: artifacts/app-release.apk
