--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -9,6 +9,10 @@ env:
   ENDPOINT: ${{ secrets.ENDPOINT }}
   CLIENT_ID: ${{ secrets.CLIENT_ID }}
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+  GMAIL_API_TOKEN: ${{ secrets.GMAIL_API_TOKEN }}
+  GMAIL_CLIENT_SECRET: ${{ secrets.GMAIL_CLIENT_SECRET }}
+  KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+  KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
 jobs:
   flutter_test:
@@ -48,7 +52,7 @@ jobs:
           name: app.apk
           path: build/app/outputs/apk/release/app-release.apk
 
-  extract_fingerprint:
+  extract_sha1:
     name: Extract SHA1 Fingerprint
     needs: [build_apk]
     runs-on: ubuntu-latest
@@ -61,4 +65,4 @@ jobs:
 
       - name: Extract SHA1 fingerprint
         run: |
-          keytool -list -printcert -jarfile ${{ github.workspace }}/app.apk | grep SHA1
+          keytool -list -printcert -jarfile ${{ github.workspace }}/app.apk | grep SHA1 > sha1.txt
