Refactor home ,settings and add edit photo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["autovalidate", "comminq", "cupertino", "dotenv", "unfocus"]
+  "cSpell.words": ["autovalidate", "comminq", "cupertino", "dotenv", "unfocus"],
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
