--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   sentry_flutter: ^7.7.0
   connectivity_plus: ^4.0.1
+  image_picker: ^0.8.9
 
 dev_dependencies:
   flutter_test:
