--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   sentry_flutter: ^7.7.0
   connectivity_plus: ^4.0.1
   image_picker: ^0.8.9
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
