--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,10 +52,10 @@ android {
 
     signingConfigs {
     debug {
-        keyAlias 'androiddebugkey'
-        keyPassword 'android'
-        storeFile file('mykey.jks')
-        storePassword 'android'
+        // keyAlias 'androiddebugkey'
+        // keyPassword 'android'
+        // storeFile file('mykey.jks')
+        // storePassword 'android'
     }   
 }
 
